--- a/sass/theme/_tms2020.scss
+++ b/sass/theme/_tms2020.scss
@@ -382,12 +382,12 @@ newsletter-title {
   margin:25px;
 }
 
-.footer-primary-div {
-  padding-left:80px;
-}
-
 .footer-branding {
   margin-top:150px;
+}
+
+#content {
+  margin:0 15px;
 }
 
 @media (min-width: 768px) {
@@ -553,8 +553,19 @@ newsletter-title {
   border-bottom:1px solid #ccc;
 }
 
+.post-date {
+  padding-left:0;
+}
+
 .post-tags a, .post-tags i {
   font-size:12pt;
+  text-align:center;
+}
+
+.post-category {
+  text-align:right;
+  padding-right:0;
+  margin-right:0;
 }
 
 .post-category a {
@@ -684,8 +695,36 @@ newsletter-title {
     margin-bottom:50px;
   }
 
+  .wp-block-embed__wrapper:before {
+    padding-top:0 !important;
+  }
+
 
 @media screen and (max-width: 768px) {
+
+  #content {
+    margin:0 5px !important;
+  }
+
+  #primary {
+    padding:0 !important;
+  }
+
+  .post-date {
+    padding-left:15px;
+  }
+
+  .post-tags {
+    text-align:left;
+  }
+
+  .post-category {
+    text-align:left;
+  }
+
+  .wp-post-image {
+    padding-left:0 !important;
+  }
 
   .search { position:static; }
 
